# finio

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  SYNTAX.md  cabal.project  fino.cabal  package.yaml  stack.yaml
.github/workflows/: haskell.yml  main.yml
.golden/case-multiple-definitions/: golden
.golden/case-undefined-modules/: golden
.golden/case-undefined-type/: golden
.golden/parse-exprs/: golden
.golden/parse-fns/: golden
.golden/parse-lits/: actual
.test/case-undefined-variable/: expected
.tests/case-circular-dependency/: expected
.tests/case-exported-declarations-not-defined/: expected
.tests/case-exported-modules-not-imported/: expected
.tests/case-fn-declaration-multiple-arity/: expected
.tests/case-kind-mismatch/: expected
.tests/case-kind-mismatch-in-data-declaration/: expected
.tests/case-multiple-declarations/: expected
.tests/case-occurs-check-fail/: expected
.tests/case-type-mismatch-1/: expected
.tests/case-type-mismatch-2/: expected
.tests/case-type-mismatch-4/: expected
.tests/case-type-mismatch-if-expression-cases/: expected
app/: AnalysisError.hs  CheckModules.hs  Lexer.hs  Main.hs  Parser.hs  Resolver.hs  Syntax.hs  Type.hs
examples/: abc.fn  basic.fn  foo.fn  list.fn  match.fn  test.fn  traits.fn  types.fn  xyz.fn
src/: AnalysisError.hs  CheckModules.hs  DeclarationSort.hs  Desugar.hs  Fino.hs  Infer.hs  InferOld.hs  Kind.hs  Lexer.hs  Name.hs  Namespace.hs  NodeId.hs  Parser.hs  ProgramSort.hs  Resolver.hs  Substitution.hs  Syntax.hs  Toposort.hs  Trait.hs  Type.hs  main.rs
test/: Spec.hs
(+37 files in other folders)
