[package]
name = "fino"
version = "0.1.0"
description = "Fino Compiler"
repository = "https://github.com/05st/fino"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.17", features = ["derive"] }